Normalize Naming Dr. Soroush Mohandessi, M.D., F.A.P.A.

--- a/clinical.html
+++ b/clinical.html
@@ -30,24 +30,24 @@ permalink: /clinical/index.html
 	<div class="medium-8 columns">
 
 		<p>
-			Dr. Mohandessi has based his private practice on the micro-practice model: lower overhead, fewer patients and greater availability
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. has based his private practice on the micro-practice model: lower overhead, fewer patients and greater availability
 			to his patients. Patients come to psychiatric treatment for various reasons including the sudden occurrence of crises
 			and the presence of lifelong issues. Most will seek relief of their symptoms and suffering. By creating an atmosphere
-			conducive to trust, self-exploration, insight and change, Dr. Mohandessi works with his patients to alleviate their symptoms
+			conducive to trust, self-exploration, insight and change, Dr. Soroush Mohandessi, M.D., F.A.P.A. works with his patients to alleviate their symptoms
 			and enhance their mental well-being.
 		</p>
 
 		<p>
-			Dr. Mohandessi is an expert in psychopharmacology and psychotherapy. In his practice, he utilizes both psychiatric medications
-			and talk therapies with an emphasis on fostering a strong therapeutic alliance. Dr. Mohandessi is trained and experienced
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. is an expert in psychopharmacology and psychotherapy. In his practice, he utilizes both psychiatric medications
+			and talk therapies with an emphasis on fostering a strong therapeutic alliance. Dr. Soroush Mohandessi, M.D., F.A.P.A. is trained and experienced
 			in supportive and insight-oriented psychotherapies, including cognitive-behavioral therapy (CBT), dialectical-behavioral
 			therapy (DBT) and psychodynamic psychotherapy (PD).
 		</p>
 
 		<p>
-			Dr. Mohandessi is also available for Second-Opinion Consultation which does not include treatment. If you are already in
-			treatment with a psychiatrist, you or your psychiatrist can arrange for a Second-Opinion Consultation by calling Dr. Mohandessi's
-			office. Dr. Mohandessi will work with you and your psychiatrist to enhance your existing treatment.
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. is also available for Second-Opinion Consultation which does not include treatment. If you are already in
+			treatment with a psychiatrist, you or your psychiatrist can arrange for a Second-Opinion Consultation by calling Dr. Soroush Mohandessi, M.D., F.A.P.A.'s
+			office. Dr. Soroush Mohandessi, M.D., F.A.P.A. will work with you and your psychiatrist to enhance your existing treatment.
 		</p>
 
 		<div class="callout primary">
@@ -59,9 +59,9 @@ permalink: /clinical/index.html
 	<div class="medium-4 columns">
 
 		<figure>
-			<img src="/images/soroush.jpg" alt="Dr. Mohandessi" title="Dr. Mohandessi" />
+			<img src="/images/soroush.jpg" alt="Dr. Soroush Mohandessi, M.D., F.A.P.A." title="Dr. Soroush Mohandessi, M.D., F.A.P.A." />
 			<figcaption>
-				Soroush Mohandessi, MD
+				Dr. Soroush Mohandessi, M.D., F.A.P.A.
 			</figcaption>
 		</figure>
 
