--- a/contact.html
+++ b/contact.html
@@ -38,11 +38,11 @@ permalink: /contact
 		</figure>
 
 		<p>
-			Dr. Mohandessi's office is located in the Medical Dental Building in Downtown Portland.
+			Dr. Soroush Mohandessi, M.D., F.A.P.A.'s office is located in the Medical Dental Building in Downtown Portland.
 		</p>
 
 		<p>
-			Dr. Mohandessi is currently accepting new patients and welcomes referrals.
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. is currently accepting new patients and welcomes referrals.
 		</p>
 
 		<address>
