--- a/forensic-services.html
+++ b/forensic-services.html
@@ -35,7 +35,7 @@ permalink: /forensic/services
 	<div class="column">
 
 		<p>
-			Dr. Mohandessi is a qualified forensic expert in state and federal courts including:
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. is a qualified forensic expert in state and federal courts including:
 		</p>
 
 		<ul class="service_list">
@@ -55,8 +55,8 @@ permalink: /forensic/services
 		</p>
 
 		<p>
-			Dr. Mohandessi uses a combination of clinical interviews, structured instruments and actuarial instruments to evaluate civil
-			and criminal forensic cases. Dr. Mohandessi's expertise including evaluations of the following issues:
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. uses a combination of clinical interviews, structured instruments and actuarial instruments to evaluate civil
+			and criminal forensic cases. Dr. Soroush Mohandessi, M.D., F.A.P.A.'s expertise including evaluations of the following issues:
 		</p>
 
 		<ul>
@@ -83,7 +83,7 @@ permalink: /forensic/services
 		</ul>
 
 		<p>
-			<strong>If you have any questions or a potential consultation, please visit the <a href="/forms">Forms section</a> and contact Dr. Mohandessi's Office.</strong>
+			<strong>If you have any questions or a potential consultation, please visit the <a href="/forms">Forms section</a> and contact Dr. Soroush Mohandessi, M.D., F.A.P.A.'s Office.</strong>
 		</p>
 
 	</div>
