--- a/index.html
+++ b/index.html
@@ -11,23 +11,22 @@ layout: default
         </figure>
 
         <p>
-            <strong>Dr. Soroush Mohandessi, M.D.</strong> is a Double-Boarded Psychiatrist (Adult in 2009 and Forensic in
-            2011) with a private practice in Portland, Oregon. He is an expert in the diagnosis and treatment of psychiatric
-            disorders. Dr. Mohandessi provides clinical services to patients and forensic services to clients.
+            <strong>Dr. Soroush Mohandessi, M.D., F.A.P.A.</strong> is appointed a Fellow of the American Psychiatric Association (2015) for his contributions and dedication to the field of mental health and psychiatry. He is a Double-Boarded Psychiatrist (Adult in 2009 and Forensic in 2011) with a private practice in Portland, Oregon. He is an expert in the diagnosis and treatment of psychiatric
+            disorders. Dr. Soroush Mohandessi, M.D., F.A.P.A. provides clinical services to patients and forensic services to clients.
         </p>
 
         <p>
-            Dr. Mohandessi has over 11 years of experience in psychiatry as a treating doctor and expert consultant. He has conducted
+            Dr. Soroush Mohandessi, M.D., F.A.P.A. has over 11 years of experience in psychiatry as a treating doctor and expert consultant. He has conducted
             thousands of clinical interviews, diagnostic evaluations and treatment assessments. In his clinically work, Dr.
             Mohandessi often coordinates with other doctors and therapists to provide treatment planning for his patients.
             In his concurrent forensic practice, he has worked with attorneys, courts, employers and other clients involved
             in a wide range of legal situations. He is also a frequent speaker at conferences, workshops and symposiums in
-            the area. Over the past decade, Dr. Mohandessi has collaborated with nationally renowned experts in the fields
+            the area. Over the past decade, Dr. Soroush Mohandessi, M.D., F.A.P.A. has collaborated with nationally renowned experts in the fields
             of psychiatry and psychology.
         </p>
 
         <p>
-            Dr. Mohandessi is an Affiliate Assistant Professor in the Department of Psychiatry at the Oregon Health &amp; Science University
+            Dr. Soroush Mohandessi, M.D., F.A.P.A. is an Affiliate Assistant Professor in the Department of Psychiatry at the Oregon Health &amp; Science University
             (OHSU). He is an instructor in the Division of Psychiatry and the Law. He also holds a faculty appointment as
             Clinical Assistant Professor of Psychiatry at Western University of Health Sciences (WUHS).
         </p>
@@ -44,6 +43,7 @@ layout: default
             <h3 class="heading">Awards &amp; Recognition</h3>
 
             <ul>
+                <li>Fellow of the American Psychiatric Association (2015)</li>
                 <li>Patients' Choice Award (2014)</li>
                 <li>Top 10 Doctor - State of Oregon, Psychiatrist (2014)</li>
                 <li>Top 10 Doctor - City of Portland, Psychiatrist (2014)</li>
