--- a/resume.html
+++ b/resume.html
@@ -30,17 +30,17 @@ permalink: /resume
 	<div class="column">
 
 		<p>
-			Dr. Mohandessi is a two-time Diplomate of <a href="http://www.abpn.com/">The American Board of Psychiatry and Neurology, Inc.</a> He is Board-Certified both in Adult (2009) and Forensic (2011) Psychiatry.
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. is a two-time Diplomate of <a href="http://www.abpn.com/">The American Board of Psychiatry and Neurology, Inc.</a> He is Board-Certified both in Adult (2009) and Forensic (2011) Psychiatry.
 		</p>
 
 		<p>
 			He completed his medical school training at the University of Washington, School of Medicine in Seattle, Washington. He traveled
 			to Alaska, Idaho, Montana and rural parts of Washington State to complete his clinical training during medical school.
-			Dr. Mohandessi lived in Chicago for four years while completing his Psychiatric Residency training at <a href="http://psychiatry.northwestern.edu/">Northwestern University</a>.
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. lived in Chicago for four years while completing his Psychiatric Residency training at <a href="http://psychiatry.northwestern.edu/">Northwestern University</a>.
 		</p>
 
 		<p>
-			Dr. Mohandessi completed subspecialty training in Forensic Psychiatry at <a href="http://www.ucdmc.ucdavis.edu/psychiatry/forensic/index.html">University of California, Davis Medical Center</a>			in Sacramento, California.
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. completed subspecialty training in Forensic Psychiatry at <a href="http://www.ucdmc.ucdavis.edu/psychiatry/forensic/index.html">University of California, Davis Medical Center</a>			in Sacramento, California.
 		</p>
 
 		<p>
@@ -52,7 +52,7 @@ permalink: /resume
 		<p>He is appointed Clinical Assistant Professor of Psychiatry at <a href="http://www.westernu.edu">Western University of Health Sciences</a> and precepts medical students on a weekly basis.</p>
 
 		<p>
-			Dr. Mohandessi has provided treatment to patients in inpatient, outpatient, forensic and correctional settings. He has experience
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. has provided treatment to patients in inpatient, outpatient, forensic and correctional settings. He has experience
 			treating patients from various socio-economic backgrounds in urban and rural communities.
 		</p>
 
@@ -62,14 +62,14 @@ permalink: /resume
 		</p>
 
 		<p>
-			Dr. Mohandessi's research efforts have included the fields of internet addiction, cyberstalking, suicide rates and risk factors,
+			Dr. Soroush Mohandessi, M.D., F.A.P.A.'s research efforts have included the fields of internet addiction, cyberstalking, suicide rates and risk factors,
 			the clinician in court, psychiatry and the media, cognitive impairments, deaf culture, sleep disorders and the prevalence
 			of psychiatric disorders in major medical diseases including heart failure and stroke.
 		</p>
 
 		<p>
-			He has lectured at national meetings including the <a href="http://www.psych.org/">American Psychiatric Association</a>			and the <a href="http://www.aapl.org/">American Academy of Psychiatry and the Law</a>. Dr. Mohandessi is available for
-			lectures on the above topics and other topics related to mental health and the law. <strong>Please contact Dr. Mohandessi if you are interested in his lecture services.</strong>
+			He has lectured at national meetings including the <a href="http://www.psych.org/">American Psychiatric Association</a>			and the <a href="http://www.aapl.org/">American Academy of Psychiatry and the Law</a>. Dr. Soroush Mohandessi, M.D., F.A.P.A. is available for
+			lectures on the above topics and other topics related to mental health and the law. <strong>Please contact Dr. Soroush Mohandessi, M.D., F.A.P.A. if you are interested in his lecture services.</strong>
 		</p>
 
 	</div>
