Updated Forensic Services content

--- a/forensic-services.html
+++ b/forensic-services.html
@@ -39,12 +39,18 @@ permalink: /forensic/services
 		</p>
 
 		<ul class="service_list">
-			<li>The Circuit Court of the State of Oregon for Multnomah County</li>
-			<li>The Circuit Court of the State of Oregon for Marion County</li>
-			<li>The Circuit Court of the State of Oregon for Lane County</li>
+			<li>The Circuit Court of the State of Oregon for Benton County</li>
+			<li>The Circuit Court of the State of Oregon for Clackamas County</li>
 			<li>The Circuit Court of the State of Oregon for Douglas County</li>
+			<li>The Circuit Court of the State of Oregon for Hood River County</li>
+			<li>The Circuit Court of the State of Oregon for Lane County</li>
+			<li>The Circuit Court of the State of Oregon for Linn County</li>
 			<li>The Circuit Court of the State of Oregon for Malheur County</li>
+			<li>The Circuit Court of the State of Oregon for Marion County</li>
+			<li>The Circuit Court of the State of Oregon for Multnomah County</li>
+			<li>The Circuit Court of the State of Oregon for Umatilla County</li>
 			<li>The Circuit Court of the State of Oregon for Washington County</li>
+			<li>The Circuit Court of the State of Oregon for Yamhill County</li>
 			<li>The Superior Court of Sacramento County of the State of California</li>
 			<li>The United States District Court for the District of Eastern California</li>
 			<li>The United States District Court for the District of Oregon</li>
@@ -60,17 +66,17 @@ permalink: /forensic/services
 		</p>
 
 		<ul>
-			<li>Malingering of psychiatric illness</li>
 			<li>Competency to stand trial </li>
 			<li>Criminal responsibility </li>
 			<li>Mitigation of sentencing </li>
 			<li>Risk of future dangerousness and violence</li>
+			<li>Malingering of psychiatric illness</li>
 			<li>Testamentary capacity</li>
 			<li>Psychiatric standard of care &amp; malpractice claims </li>
 			<li>Habeas Corpus petitions</li>
 			<li>Independent Medical Examinations (IMEs)</li>
 			<li>Disability claims</li>
-			<li>Fitness for duty</li>
+			<li>Fitness For Duty (FFD)</li>
 			<li>Sexual harassment</li>
 			<li>Internet addiction and Cyberstalking</li>
 			<li>Involuntary medication cases (Sell and Lopes orders)</li>
