Resume content changes

--- a/resume.html
+++ b/resume.html
@@ -30,6 +30,10 @@ permalink: /resume
 	<div class="column">
 
 		<p>
+			Dr. Soroush Mohandessi, M.D., F.A.P.A. is appointed a Fellow of the American Psychiatric Associations (2015).  Fellow status in the APA is an honor that reflects his dedication to his work and the psychiatric profession.  As a result, Dr. Soroush Mohandessi, M.D., F.A.P.A. was recognized by his peers to qualify as a member of a very select group of psychiatrist in the nation.
+		</p>
+
+		<p>
 			Dr. Soroush Mohandessi, M.D., F.A.P.A. is a two-time Diplomate of <a href="http://www.abpn.com/">The American Board of Psychiatry and Neurology, Inc.</a> He is Board-Certified both in Adult (2009) and Forensic (2011) Psychiatry.
 		</p>
 
@@ -46,10 +50,8 @@ permalink: /resume
 		<p>
 			He is a Licensed Physician in the States of Oregon, California and Illinois. He is appointed Affiliate Assistant Professor
 			at <a href="http://www.ohsu.edu/xd/">Oregon Health &amp; Science University School of Medicine</a> and serves the Division
-			of Psychiatry and the Law.
+			of Psychiatry and the Law. He is appointed Clinical Assistant Professor of Psychiatry at <a href="http://www.westernu.edu">Western University of Health Sciences</a> and precepts medical students on a weekly basis.
 		</p>
-
-		<p>He is appointed Clinical Assistant Professor of Psychiatry at <a href="http://www.westernu.edu">Western University of Health Sciences</a> and precepts medical students on a weekly basis.</p>
 
 		<p>
 			Dr. Soroush Mohandessi, M.D., F.A.P.A. has provided treatment to patients in inpatient, outpatient, forensic and correctional settings. He has experience
