Fix what to expect link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
 
     <div class="medium-4 columns">
 
-        <div class="callout primary"><a href="/clinical-details">New Patients &raquo; What to Expect</a></div>
+        <div class="callout primary"><a href="/clinical/what-to-expect">New Patients &raquo; <strong>What to Expect</strong></a></div>
 
         <p><strong>Accepting Regence/BCBS, LifeWise and Self-pay</strong></p>
 
