Add trophy icon to awards and recognition box

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
         <p><strong>Accepting Regence/BCBS, LifeWise and Self-pay</strong></p>
 
         <div class="callout">
-            <h3 class="heading">Awards &amp; Recognition</h3>
+            <h4 class="heading"><img src="/images/trophy.svg" style="width:30px;" /> Awards &amp; Recognition</h4>
 
             <ul>
                 <li>Fellow of the American Psychiatric Association (2015)</li>
