Revert naming change

--- a/clinical-what-to-expect.html
+++ b/clinical-what-to-expect.html
@@ -37,9 +37,9 @@ permalink: /clinical/what-to-expect
         <h4>Phone Introduction</h4>
 
         <p>
-            As a potential patient, you will call Dr. Soroush Mohandessi, M.D., F.A.P.A. and arrange for a phone introduction. During a brief phone introduction,
-            Dr. Soroush Mohandessi, M.D., F.A.P.A. will inquire about your symptoms and reason for seeking treatment. He will orient you to his practice
-            and schedule. Based on Dr. Soroush Mohandessi, M.D., F.A.P.A.'s availability, you will be able to schedule an Initial Evaluation appointment.
+            As a potential patient, you will call Dr. Mohandessi and arrange for a phone introduction. During a brief phone introduction,
+            Dr. Mohandessi will inquire about your symptoms and reason for seeking treatment. He will orient you to his practice
+            and schedule. Based on Dr. Mohandessi's availability, you will be able to schedule an Initial Evaluation appointment.
             After arranging your appointment, please visit the Forms section and review the New Patient Forms prior to your
             appointment.
 
@@ -48,9 +48,9 @@ permalink: /clinical/what-to-expect
         <h4>Initial Evaluation</h4>
 
         <p>
-            Dr. Soroush Mohandessi, M.D., F.A.P.A.'s Initial Evaluation may last between 60 and 90 minutes. Please arrive at least 15 minutes prior to your appointment
-            to complete the necessary Forms. During the Initial Evaluation, Dr. Soroush Mohandessi, M.D., F.A.P.A. will ask about your personal,
-            medical, psychiatric, and family histories while listening to your concerns. Your openness with Dr. Soroush Mohandessi, M.D., F.A.P.A.
+            Dr. Mohandessi's Initial Evaluation may last between 60 and 90 minutes. Please arrive at least 15 minutes prior to your appointment
+            to complete the necessary Forms. During the Initial Evaluation, Dr. Mohandessi will ask about your personal,
+            medical, psychiatric, and family histories while listening to your concerns. Your openness with Dr. Mohandessi
             will allow him to understand your difficulties, come to a diagnosis and form an appropriate treatment plan.
 
         </p>
@@ -58,12 +58,12 @@ permalink: /clinical/what-to-expect
         <h4>Diagnostic Phase</h4>
 
         <p>
-            Depending on the case, Dr. Soroush Mohandessi, M.D., F.A.P.A. may require one to two additional 50 minutes sessions to complete a thorough evaluation
-            of your case. During the Diagnostic Phase, Dr. Soroush Mohandessi, M.D., F.A.P.A. will gather more information about your symptoms and
+            Depending on the case, Dr. Mohandessi may require one to two additional 50 minutes sessions to complete a thorough evaluation
+            of your case. During the Diagnostic Phase, Dr. Mohandessi will gather more information about your symptoms and
             difficulties to make an appropriate diagnosis. He may also recommend obtaining prior medical records or refer
-            you for a medical consultation and work-up. This Phase is also an opportunity for you to get to know Dr. Soroush Mohandessi, M.D., F.A.P.A.'s
-            practice and decide if it is a good fit for you. By the end of the Diagnostic Phase, Dr. Soroush Mohandessi, M.D., F.A.P.A. will share
-            with you his findings and treatment recommendations. If you both agree, Dr. Soroush Mohandessi, M.D., F.A.P.A. will become your psychiatrist
+            you for a medical consultation and work-up. This Phase is also an opportunity for you to get to know Dr. Mohandessi's
+            practice and decide if it is a good fit for you. By the end of the Diagnostic Phase, Dr. Mohandessi will share
+            with you his findings and treatment recommendations. If you both agree, Dr. Mohandessi will become your psychiatrist
             and you will enter treatment with him.
 
         </p>
@@ -71,11 +71,11 @@ permalink: /clinical/what-to-expect
         <h4>Short-term Treatment Phase</h4>
 
         <p>
-            After entering treatment with Dr. Soroush Mohandessi, M.D., F.A.P.A., The Short-term Treatment Phase will focus on amelioration and management of
+            After entering treatment with Dr. Mohandessi, The Short-term Treatment Phase will focus on amelioration and management of
             the symptoms that led you to treatment. This Phase of treatment may last several weeks to months and involves
             regular appointments. The Short-term Treatment Phase may vary from patient-to-patient and include medication
-            management and/or psychotherapy. During this phase, you and Dr. Soroush Mohandessi, M.D., F.A.P.A. will be able to discuss your goals
-            and expectations for treatment. Overall, Dr. Soroush Mohandessi, M.D., F.A.P.A. will work with you towards bringing your symptoms under
+            management and/or psychotherapy. During this phase, you and Dr. Mohandessi will be able to discuss your goals
+            and expectations for treatment. Overall, Dr. Mohandessi will work with you towards bringing your symptoms under
             control.
 
         </p>
@@ -86,14 +86,14 @@ permalink: /clinical/what-to-expect
             Once your symptoms are brought under control and the short-term goals of your treatment have been met, you may enter the
             Long-term Treatment Phase. This Phase of treatment may last between several months to years and also consists
             of regular appointments. The focus of treatment will transition to life issues such as your relationships, self-awareness,
-            self-esteem, productivity, individual efficacy and life satisfaction. Dr. Soroush Mohandessi, M.D., F.A.P.A. strives to guide his patients
+            self-esteem, productivity, individual efficacy and life satisfaction. Dr. Mohandessi strives to guide his patients
             through stages of greater understanding and insight toward lasting change and enhanced mental well-being.
 
         </p>
 
 
         <p>
-            <strong>If you are interested in treatment with Dr. Soroush Mohandessi, M.D., F.A.P.A., please visit the <a href="/forms">Forms section</a> and call the office to make an appointment.</strong>
+            <strong>If you are interested in treatment with Dr. Mohandessi, please visit the <a href="/forms">Forms section</a> and call the office to make an appointment.</strong>
         </p>
 
     </div>
