--- a/forensic.html
+++ b/forensic.html
@@ -30,18 +30,18 @@ permalink: /forensic/index.html
 	<div class="medium-8 columns">
 
 		<p>
-			Forensic Psychiatry is the interface of mental health and the law. Dr. Soroush Mohandessi, M.D., F.A.P.A. is an expert in Forensic Psychiatry. He
+			Forensic Psychiatry is the interface of mental health and the law. Dr. Mohandessi is an expert in Forensic Psychiatry. He
 			is Board-Certified in Forensic Psychiatry and completed a one year subspecialty Fellowship in Forensic Psychiatry at the
 			<a href="http://www.ucdmc.ucdavis.edu/psychiatry/forensic/index.html">University of California, Davis Medical Center</a>.
 		</p>
 
 		<p>
-			Dr. Soroush Mohandessi, M.D., F.A.P.A. is experienced in a variety of criminal and civil forensic cases. He is trained to administer many of the
+			Dr. Mohandessi is experienced in a variety of criminal and civil forensic cases. He is trained to administer many of the
 			commonly used structured forensic psychological instruments.
 		</p>
 
 		<p>
-			Dr. Soroush Mohandessi, M.D., F.A.P.A.'s forensic clients have included private and public attorneys, courts, hospitals, and corporations. Dr. Soroush Mohandessi, M.D., F.A.P.A.
+			Dr. Mohandessi's forensic clients have included private and public attorneys, courts, hospitals, and corporations. Dr. Mohandessi
 			is currently Accepting New Referrals for adult forensic consultation.
 		</p>
 
