--- a/resume.html
+++ b/resume.html
@@ -30,21 +30,21 @@ permalink: /resume
 	<div class="column">
 
 		<p>
-			Dr. Soroush Mohandessi, M.D., F.A.P.A. is appointed a Fellow of the American Psychiatric Associations (2015).  Fellow status in the APA is an honor that reflects his dedication to his work and the psychiatric profession.  As a result, Dr. Soroush Mohandessi, M.D., F.A.P.A. was recognized by his peers to qualify as a member of a very select group of psychiatrist in the nation.
+			Dr. Mohandessi is appointed a Fellow of the American Psychiatric Associations (2015).  Fellow status in the APA is an honor that reflects his dedication to his work and the psychiatric profession.  As a result, Dr. Mohandessi was recognized by his peers to qualify as a member of a very select group of psychiatrist in the nation.
 		</p>
 
 		<p>
-			Dr. Soroush Mohandessi, M.D., F.A.P.A. is a two-time Diplomate of <a href="http://www.abpn.com/">The American Board of Psychiatry and Neurology, Inc.</a> He is Board-Certified both in Adult (2009) and Forensic (2011) Psychiatry.
+			Dr. Mohandessi is a two-time Diplomate of <a href="http://www.abpn.com/">The American Board of Psychiatry and Neurology, Inc.</a> He is Board-Certified both in Adult (2009) and Forensic (2011) Psychiatry.
 		</p>
 
 		<p>
 			He completed his medical school training at the University of Washington, School of Medicine in Seattle, Washington. He traveled
 			to Alaska, Idaho, Montana and rural parts of Washington State to complete his clinical training during medical school.
-			Dr. Soroush Mohandessi, M.D., F.A.P.A. lived in Chicago for four years while completing his Psychiatric Residency training at <a href="http://psychiatry.northwestern.edu/">Northwestern University</a>.
+			Dr. Mohandessi lived in Chicago for four years while completing his Psychiatric Residency training at <a href="http://psychiatry.northwestern.edu/">Northwestern University</a>.
 		</p>
 
 		<p>
-			Dr. Soroush Mohandessi, M.D., F.A.P.A. completed subspecialty training in Forensic Psychiatry at <a href="http://www.ucdmc.ucdavis.edu/psychiatry/forensic/index.html">University of California, Davis Medical Center</a>			in Sacramento, California.
+			Dr. Mohandessi completed subspecialty training in Forensic Psychiatry at <a href="http://www.ucdmc.ucdavis.edu/psychiatry/forensic/index.html">University of California, Davis Medical Center</a>			in Sacramento, California.
 		</p>
 
 		<p>
@@ -54,7 +54,7 @@ permalink: /resume
 		</p>
 
 		<p>
-			Dr. Soroush Mohandessi, M.D., F.A.P.A. has provided treatment to patients in inpatient, outpatient, forensic and correctional settings. He has experience
+			Dr. Mohandessi has provided treatment to patients in inpatient, outpatient, forensic and correctional settings. He has experience
 			treating patients from various socio-economic backgrounds in urban and rural communities.
 		</p>
 
@@ -64,14 +64,14 @@ permalink: /resume
 		</p>
 
 		<p>
-			Dr. Soroush Mohandessi, M.D., F.A.P.A.'s research efforts have included the fields of internet addiction, cyberstalking, suicide rates and risk factors,
+			Dr. Mohandessi's research efforts have included the fields of internet addiction, cyberstalking, suicide rates and risk factors,
 			the clinician in court, psychiatry and the media, cognitive impairments, deaf culture, sleep disorders and the prevalence
 			of psychiatric disorders in major medical diseases including heart failure and stroke.
 		</p>
 
 		<p>
-			He has lectured at national meetings including the <a href="http://www.psych.org/">American Psychiatric Association</a>			and the <a href="http://www.aapl.org/">American Academy of Psychiatry and the Law</a>. Dr. Soroush Mohandessi, M.D., F.A.P.A. is available for
-			lectures on the above topics and other topics related to mental health and the law. <strong>Please contact Dr. Soroush Mohandessi, M.D., F.A.P.A. if you are interested in his lecture services.</strong>
+			He has lectured at national meetings including the <a href="http://www.psych.org/">American Psychiatric Association</a>			and the <a href="http://www.aapl.org/">American Academy of Psychiatry and the Law</a>. Dr. Mohandessi is available for
+			lectures on the above topics and other topics related to mental health and the law. <strong>Please contact Dr. Mohandessi if you are interested in his lecture services.</strong>
 		</p>
 
 	</div>
