Remove WUHS details. Add AAPL details.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@ layout: default
         </p>
 
         <p>
-            Dr. Mohandessi is an Affiliate Assistant Professor in the Department of Psychiatry at the Oregon Health &amp; Science University
-            (OHSU). He is an instructor in the Division of Psychiatry and the Law. He also holds a faculty appointment as
-            Clinical Assistant Professor of Psychiatry at Western University of Health Sciences (WUHS).
+            Dr. Mohandessi is an Affiliate Assistant Professor in the Department of Psychiatry at the Oregon Health &amp;
+            Science University (OHSU).
+        </p>
+
+        <p>
+            Dr. Mohandessi is an appointed member of the national committee for Private Practice
+            that serves the American Academy of Psychiatry and the Law (2016).
         </p>
 
     </div>
