Adjust insurance list

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
 
         <div class="callout primary"><a href="/clinical/what-to-expect">New Patients &raquo; <strong>What to Expect</strong></a></div>
 
-        <p><strong>Accepting Regence/BCBS, LifeWise and Self-pay</strong></p>
+        <p><strong>Accepting Providence/PBH, Health Net/MHN, Regence/BCBS and Self-pay</strong></p>
 
         <div class="callout">
             <h4 class="heading"><img src="/images/trophy.svg" style="width:30px;" /> Awards &amp; Recognition</h4>
@@ -53,7 +53,7 @@ layout: default
                 <li>Top 10 Doctor - City of Portland, Psychiatrist (2014)</li>
                 <li>Patients' Choice Award (2012)</li>
             </ul>
-        </div
+        </div>
 
     </div>
 
