Add AAPL experience

--- a/resume.html
+++ b/resume.html
@@ -36,6 +36,12 @@ permalink: /resume
 		<p>
 			Dr. Mohandessi is a two-time Diplomate of <a href="http://www.abpn.com/">The American Board of Psychiatry and Neurology, Inc.</a> He is Board-Certified both in Adult (2009) and Forensic (2011) Psychiatry.
 		</p>
+        
+        <p>
+            In 2016, Dr. Mohandessi was appointed to the national committee for Private Practice that serves the
+            American Academy of Psychiatry and the Law.  His position involves research, teaching and advocacy
+            related to his work as a forensic psychiatrist in private practice.
+        <p>
 
 		<p>
 			He completed his medical school training at the University of Washington, School of Medicine in Seattle, Washington. He traveled
