Update WUHS details

--- a/resume.html
+++ b/resume.html
@@ -30,11 +30,14 @@ permalink: /resume
 	<div class="column">
 
 		<p>
-			Dr. Mohandessi is appointed a Fellow of the American Psychiatric Associations (2015).  Fellow status in the APA is an honor that reflects his dedication to his work and the psychiatric profession.  As a result, Dr. Mohandessi was recognized by his peers to qualify as a member of a very select group of psychiatrist in the nation.
+			Dr. Mohandessi is appointed a Fellow of the American Psychiatric Associations (2015).
+            Fellow status in the APA is an honor that reflects his dedication to his work and the psychiatric profession.
+            As a result, Dr. Mohandessi was recognized by his peers to qualify as a member of a very select group of psychiatrist in the nation.
 		</p>
 
 		<p>
-			Dr. Mohandessi is a two-time Diplomate of <a href="http://www.abpn.com/">The American Board of Psychiatry and Neurology, Inc.</a> He is Board-Certified both in Adult (2009) and Forensic (2011) Psychiatry.
+			Dr. Mohandessi is a two-time Diplomate of <a href="http://www.abpn.com/">The American Board of Psychiatry and Neurology, Inc.</a>
+            He is Board-Certified both in Adult (2009) and Forensic (2011) Psychiatry.
 		</p>
         
         <p>
@@ -50,14 +53,16 @@ permalink: /resume
 		</p>
 
 		<p>
-			Dr. Mohandessi completed subspecialty training in Forensic Psychiatry at <a href="http://www.ucdmc.ucdavis.edu/psychiatry/forensic/index.html">University of California, Davis Medical Center</a>			in Sacramento, California.
+			Dr. Mohandessi completed subspecialty training in Forensic Psychiatry at
+            <a href="http://www.ucdmc.ucdavis.edu/psychiatry/forensic/index.html">University of California, Davis Medical Center</a> in Sacramento, California.
 		</p>
 
 		<p>
 			He is a Licensed Physician in the States of Oregon, California and Illinois. He is appointed Affiliate Assistant Professor
 			at <a href="http://www.ohsu.edu/xd/">Oregon Health &amp; Science University School of Medicine</a> and serves the Division
-			of Psychiatry and the Law. He is appointed Clinical Assistant Professor of Psychiatry at <a href="http://www.westernu.edu">Western University of Health Sciences</a> and precepts medical students on a weekly basis.
-		</p>
+			of Psychiatry and the Law. He is a former Clinical Assistant Professor of Psychiatry at
+            <a href="http://www.westernu.edu">Western University of Health Sciences</a> (2011-2016).
+        </p>
 
 		<p>
 			Dr. Mohandessi has provided treatment to patients in inpatient, outpatient, forensic and correctional settings. He has experience
@@ -76,8 +81,10 @@ permalink: /resume
 		</p>
 
 		<p>
-			He has lectured at national meetings including the <a href="http://www.psych.org/">American Psychiatric Association</a>			and the <a href="http://www.aapl.org/">American Academy of Psychiatry and the Law</a>. Dr. Mohandessi is available for
-			lectures on the above topics and other topics related to mental health and the law. <strong>Please contact Dr. Mohandessi if you are interested in his lecture services.</strong>
+			He has lectured at national meetings including the <a href="http://www.psych.org/">American Psychiatric Association</a>
+            and the <a href="http://www.aapl.org/">American Academy of Psychiatry and the Law</a>. Dr. Mohandessi is available for
+			lectures on the above topics and other topics related to mental health and the law.
+            <strong>Please contact Dr. Mohandessi if you are interested in his lecture services.</strong>
 		</p>
 
 	</div>
